<resources>
    <string name="app_name"><b><i>IMAGE SHARE</i></b></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signup_text">No account yet? <u>Create one</u></string>
    <string name="signin_text">Already a member? <u>Login</u></string>

    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_up">CREATE ACCOUNT</string>
    <string name="action_sign_in_short">Sign in</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Firebase_Url">http://www.firebase.com/</string>
    <string name="galarytext">Open Gallery</string>
</resources>
